public/stylesheets/home.css
body {
  height: 100vh;
  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6)),
    url("https://res.cloudinary.com/dspwhfrx6/image/upload/v1634835466/IndieCafe/the-creative-exchange-d1ngW7SNehM-unsplash_vvaujp.jpg");
  background-size: cover;
  background-position: center;
  text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
  box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
}
.cover-container {
  max-width: 60vw;
}

.nav-link {
  padding: 0.25rem 0;
  font-weight: 500;
  color: rgba(255, 255, 255, 0.5);
  margin-left: 1rem;
}

.nav-link:hover {
  color: white;
}

.nav-link.active {
  color: white;
}

.btn-light {
  text-shadow: none;
}
.btn-light:hover {
  background-color: rgb(197, 197, 197);
  border-color: rgb(197, 197, 197);
}

